--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ components:
     # 文章字数统计
     word_count:
         enabled: true
+    # 禁用网页 F12 调试
+    html_debug:
+      enabled: false
     # 页面右上角，天气插件
     weather:
         enabled: true
