--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,6 +2,10 @@
   url: https://nineholic.github.io
   src: life
 
+- name: 个人导航
+  url: http://47.116.143.99:88
+  src: life
+
 - name: 羽翼城
   url: https://www.dogfight360.com/blog
   src: life
