--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,13 +1,5 @@
 - name: Nine
-  url: https://nineholic.github.io
-  src: life
-
-- name: 个人导航
-  url: http://47.116.143.99:88
-  src: life
-
-- name: 羽翼城
-  url: https://www.dogfight360.com/blog
+  url: https://blog.nine.a0001.net
   src: life
 
 - name: 其乐
