--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v5
         with: 
           persist-credentials: false
 
-      - name: Set Ruby 2.7
-        uses: actions/setup-ruby@v1
+      - name: Set Ruby 3.4
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 3.4
 
       - name: Install and Build
         run: |
