--- a/_config.yml
+++ b/_config.yml
@@ -46,13 +46,13 @@ components:
         view: cate
     # 图片灯箱效果功能
     fancybox:
-        enabled: false
+        enabled: true
 # 压缩页面内容
 compress_html:
   clippings: all
   comments: ["<!--", "-->"]
 # 代码高亮风格，支持的 theme 列表见 https://github.com/mzlogin/rouge-themes
-highlight_theme: github
+highlight_theme: base16.solarized
 
 # ---------------- #
 #      Author      #
