--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ components:
         hide-platforms: qq,facebook
     # 不蒜子访问统计
     busuanzi:
-        enabled: true
+        enabled: false
         start_date: 2021-05-01
     # My Popular Repositories
     side_bar_repo:
