hide wiki & fragments

--- a/_config.yml
+++ b/_config.yml
@@ -86,13 +86,13 @@ navs:
 #    label: 开源
 #    mobile-hidden: true
 
-  -
-    href: /fragments/
-    label: 片段
+#  -
+#    href: /fragments/
+#    label: 片段
 
-  -
-    href: /wiki/
-    label: 维基
+#  -
+#    href: /wiki/
+#    label: 维基
 
   -
     href: /links/
